# Taxi_management_db

./: .gitignore  pyproject.toml  readme.md  requirements.txt
scripts/: mearging_excel_files.py  pdf_to_excel.py  requirements.txt  row_data_cleaner.py  row_data_cleaner_app.py  taxi_data_entry_webapp.py
