[project]
name = "taxi-management-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "psycopg2>=2.9.11",
    "pytesseract>=0.3.13",
    "streamlit>=1.52.2",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]
